--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^10.1.3",
+    "@next/mdx": "^12.0.7",
     "autoprefixer": "^10.2.4",
-    "next": "10.0.7",
+    "next": "^12.0.7",
     "postcss": "^8.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
